# comfort

./: .gitignore  Cargo.toml  README.md
docs/: phase-1-vision-gesture.md  stage-1-foundation.md  stage-2-vision-integration.md  stage-3-core-gestures.md  stage-4-calibration-and-ux.md  stage-5-hardening-and-release.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tracking-core/: Cargo.toml
tracking-core/src/: config.rs  engine.rs  gestures.rs  input.rs  lib.rs  smoothing.rs  telemetry.rs  tracker.rs  types.rs
tracking-sidecar/: Cargo.toml
tracking-sidecar/src/: config.rs  gestures.rs  health.rs  ipc.rs  main.rs  pipeline.rs  trace.rs  types.rs
ui/: index.html
vision/: mediapipe_tracker.py  requirements.txt
